Bugfixes: fixed word wrapping bug in list cards, fixed review list not updating after "more reviews" was clicked and another product was selected

--- a/client/src/RatingsAndReviews/css/ReviewList.css
+++ b/client/src/RatingsAndReviews/css/ReviewList.css
@@ -14,6 +14,7 @@
   flex-direction: column;
   justify-content: center;
   border-bottom: 2px solid gray;
+  word-break: break-all;
 }
 
 .card-top-row {
@@ -76,7 +77,7 @@
   margin: 15px 0 10px 10px;
 }
 
-.fa-check {
+.recommended .fa-check {
   top: 0; left: 0;
   margin-right: 5px;
   z-index: -1;
